# kizana

./: .gitignore  DEPLOYMENT.md  README.md  SECURITY_AUDIT.md  analyze2.py  analyze3.py  analyze4.py  analyze5.py  analyze6.py  analyze_problematic.py  analyze_queries.py  analyze_v17.py  check_around_apa.py  check_db.sh  check_db2.sh  check_progress.py  check_response_format.py  deep_analysis.py  extract_v27.py  find_apa.py  full_quality_scan.py  inv3.sh  investigate2.sh  investigate3.sh  investigate4.sh  investigate5.sh  investigate6.sh  investigate_mismatch.sh  investigate_snippets.sh  investigate_snippets2.sh  low_results.py  scan9.py  scan_zeros.py  show_range.py  test_ai.sh  test_search.sh  test_search2.sh  update_service.sh
backend/: .env.example  Cargo.toml  V15_EVALUATION_REPORT.md  analyze_eval.py  analyze_eval_old.py  analyze_relevance.py  analyze_v12.py  audit_zeros.py  check_api.py  check_en_terms.py  check_progress.py  check_terms.py  check_v14.py  compare_eval.py  deep_audit.py  deep_audit_output.txt  deploy_v15.py  eval_results.json  eval_results_fresh.json  eval_results_v13.json  eval_results_v14.json  eval_test.py  expand_queries.py  expand_queries_2.py  expand_queries_3.py  expand_queries_4.py  expand_queries_5.py  expand_queries_6.py  final_audit.py  find_gaps.py  full_test.py  generate_10k_queries.py  queries_10k.json  queries_10k_eval.json  quick_test.py  run_eval_10k.py  sample_queries.py  sample_queries2.py  sample_queries3.py  zero_results_analysis.txt
backend/evaluation/: debug_structure.py  extract_all_results.py  extract_baselines.py  (+2 more)
(+81 files in other folders)
