[package]
name = "kizana-search"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tantivy = "0.22"
reqwest = { version = "0.12", features = ["json", "stream"] }
jsonwebtoken = "9"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
redis = { version = "0.25", features = ["tokio-comp", "aio"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
futures = "0.3"
parking_lot = "0.12"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
